--- a/css/style.css
+++ b/css/style.css
@@ -549,10 +549,6 @@ input:disabled {
     padding: 48px;
   }
 
-  .c-nav__link:after {
-    left: 16px;
-  }
-
   .c-nav__link:focus:after,
   .c-nav__link:hover:after {
     width: calc(50% - 16px);
@@ -563,6 +559,9 @@ input:disabled {
   /* Hide the mobile nav on larger viewports even whent it's open on smaller screens */
   .c-mobile-nav {
     display: none !important;
+  }
+  .c-nav__link:after {
+    left: 16px;
   }
 }
 
@@ -604,7 +603,7 @@ input:disabled {
   padding: 16px;
   max-width: 400px;
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -1048,4 +1047,11 @@ input:disabled {
 }
 .u-mb-s {
   margin-bottom: 8px;
+}
+
+.c-wall__from {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 16px;
 }
