--- a/css/style.css
+++ b/css/style.css
@@ -428,6 +428,7 @@ input:disabled {
   border: 2px solid var(--global-color-gray-xx-light);
 }
 
+.is-selected,
 .c-nav__link,
 .c-nav__link:active {
   color: var(--global-color-gray-xxxx-light);
@@ -441,10 +442,11 @@ input:disabled {
   color: var(--global-color-gray-xxxx-light);
 }
 
-.is-selected:after,
 .c-nav__link:focus:after,
 .c-nav__link:hover:after {
+  width: 100%;
   max-width: 30px;
+  background-color: var(--global-color-beta);
 }
 
 .c-nav__link--meta:focus:after,
@@ -465,6 +467,11 @@ input:disabled {
   background-color: var(--global-color-beta);
 }
 
+.is-selected:after {
+  width: 100%;
+  max-width: 30px;
+}
+
 @media (min-width: 992px) {
   .c-nav__list {
     display: flex;
@@ -475,6 +482,15 @@ input:disabled {
   .is-selected,
   .c-nav__link {
     padding: 4px 16px;
+  }
+
+  .c-nav__link:focus:after,
+  .c-nav__link:hover:after {
+    max-width: 30%;
+  }
+
+  .is-selected:after {
+    max-width: 30%;
   }
 }
 
@@ -604,18 +620,14 @@ input:disabled {
 }
 
 .c-home__content {
-  position: absolute;
-  top: 0;
-  left: 0;
-  padding: 16px;
+  padding: 32px;
   max-width: 400px;
   width: 100%;
-  height: 100dvh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  z-index: -1;
 }
 
 .c-home__title {
@@ -809,14 +821,17 @@ input:disabled {
   flex-direction: column;
   gap: 32px;
   width: 100%;
-  height: 100%;
   position: relative;
-  top: 700px;
+  top: 100px;
+  padding: 16px;
 }
 
 @media (min-width: 768px) {
+
   .c-detailRoute {
-    top: 125px;
+    padding: 32px;
+    flex-direction: row;
+    align-items: flex-start;
   }
 }
 
@@ -912,12 +927,6 @@ input:disabled {
 }
 
 @media (min-width: 768px) {
-  .c-detailRoute {
-    padding: 16px;
-    flex-direction: row;
-    align-items: flex-start;
-  }
-
   .c-wall {
     gap: 16px;
     padding: 32px;
