--- a/css/style.css
+++ b/css/style.css
@@ -505,7 +505,7 @@ input:disabled {
   top: -100%;
   right: 0;
   left: 0;
-  height: 100vh;
+  height: 100dvh;
   pointer-events: none;
   transition: all 0.5s ease-in;
   z-index: 1;
@@ -540,9 +540,9 @@ input:disabled {
 .c-mobile-nav__body {
   position: relative;
   padding: 24px;
-  height: 80vh;
+  height: 80dvh;
   width: 100%;
-  clip-path: polygon(0 0, 100% 0, 100% 72vh, 0% 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 72dvh, 0% 100%);
   background-color: var(--global-color-alpha-xx-dark);
   opacity: 0;
   transform: translateX(-100px);
@@ -623,7 +623,7 @@ input:disabled {
   padding: 32px;
   max-width: 400px;
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -707,7 +707,7 @@ input:disabled {
 
 .c-Routes__touw {
   width: 100%;
-  min-height: 100vh;
+  min-height: 100dvh;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -758,7 +758,7 @@ input:disabled {
 
 .c-touw__content {
   width: 100%;
-  min-height: 100vh;
+  min-height: 100dvh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -802,7 +802,7 @@ input:disabled {
 
   .c-touw {
     max-width: 300px;
-    height: 100vh;
+    height: 100dvh;
   }
 }
 
@@ -895,14 +895,6 @@ input:disabled {
 
 .c-wall__grid--item--grip--bidoigt:after {
   background: url(../img/grips/Bidoigt.svg) no-repeat center center / 100%;
-}
-
-.c-wall--meta {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
 }
 
 .c-wall__svg {
