--- a/css/style.css
+++ b/css/style.css
@@ -361,6 +361,14 @@ input:disabled {
   height: 32px;
   display: flex;
   align-items: center;
+  outline: none;
+  transition: transform .2s ease-in-out;
+
+}
+
+.c-logo:hover {
+  transform: scale(1.1);
+  fill: var(--global-color-alpha-xx-light);
 }
 
 .c-logo__symbol {
@@ -410,6 +418,7 @@ input:disabled {
   font-size: 18px;
   display: block;
   padding: 8px 0;
+  outline: none;
 }
 
 .c-nav__link:after {
@@ -444,7 +453,7 @@ input:disabled {
 
 .c-nav__link:focus:after,
 .c-nav__link:hover:after {
-  width: 100%;
+  width: 30px;
   max-width: 30px;
   background-color: var(--global-color-beta);
 }
@@ -468,7 +477,7 @@ input:disabled {
 }
 
 .is-selected:after {
-  width: 100%;
+  width: 30px;
   max-width: 30px;
 }
 
@@ -479,7 +488,6 @@ input:disabled {
     margin-right: -16px;
   }
 
-  .is-selected,
   .c-nav__link {
     padding: 4px 16px;
   }
@@ -946,7 +954,6 @@ input:disabled {
   max-width: 302px;
   display: flex;
   flex-direction: column;
-  gap: 8px;
 }
 
 .c-wall__routes {
@@ -1094,8 +1101,10 @@ input:disabled {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+}
+
+.c-commend__add {
   padding: 24px;
-  gap: 24px;
 }
 
 .c-comment__area {
@@ -1121,6 +1130,17 @@ input:disabled {
   align-items: center;
   justify-content: center;
   gap: 8px;
+}
+
+.c-commen__button:focus,
+.c-commen__button:hover {
+  background-color: var(--global-color-alpha-xx-dark);
+  color: var(--global-color-gray-xxxx-light);
+  box-shadow: 2px 2px 2px var(--global-color-alpha);
+}
+
+.c-commen__button:active {
+  background-color: var(--global-color-alpha);
 }
 
 .stars {
@@ -1171,9 +1191,67 @@ input:disabled {
   fill: #d8d8d8;
 }
 
+.c-comment__header {
+  margin-bottom: 8px;
+}
+
 .c-comments {
   display: flex;
   flex-direction: column;
   gap: 16px;
+  width: 100%;
+}
+
+.c-comment {
+  background-color: var(--global-color-alpha-xx-light);
   padding: 24px;
+  box-shadow: 2px 2px 6px 0px var(--global-color-gray-xx-light);
+  border-radius: 4px;
+}
+
+.c-comment-top {
+  display: flex;
+  align-items: center;
+  margin-bottom: 8px;
+}
+
+.c-comment__name {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 20px;
+}
+
+.c-comment__date {
+  font-size: 14px;
+  font-weight: 200;
+  line-height: 18px;
+}
+
+.c-comment__img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 16px;
+  background-color: var(--global-color-beta);
+  background: url(https://www.dmarge.com/wp-content/uploads/2021/01/dwayne-the-rock-.jpg) no-repeat center center / cover;
+}
+
+.c-comment__stars {
+  display: flex;
+  gap: 4px;
+  margin-bottom: 16px;
+}
+
+.c-comment__star {
+  fill: var(--global-color-gray-xxx-light);
+}
+
+.c-comment__star--fill {
+  fill: var(--global-color-beta);
+}
+
+.c-comment__text {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
 }
