--- a/css/style.css
+++ b/css/style.css
@@ -1270,10 +1270,10 @@ input:disabled {
 
 .c-dashboard__sidebar {
   background-color: var(--global-color-alpha-xx-dark);
-  padding: 64px 0 16px 8px;
+  padding: 24px 0 16px 0;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-end;
   justify-content: space-between;
   position: sticky;
   top: 0;
@@ -1285,6 +1285,10 @@ input:disabled {
   position: sticky;
   top: 0;
   z-index: 2;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 16px;
 }
 
 .c-dashboard__main {
@@ -1306,24 +1310,45 @@ input:disabled {
   height: 100%;
 }
 
+.c-dasboard__sidebar--top {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
 .c-db-label--options {
   display: flex;
   align-items: center;
-  justify-content: center;
-  width: 100%;
-  padding: 16px 24px 16px 12px;
-  border-radius: 50% 0 0 50%;
+  padding: 18px 28px 18px 18px;
+  border-radius: 100% 0 0 100%;
+  cursor: pointer;
+  background-image: none;
+  transition: all 0.125s ease-in
 }
 
 .c-db-custom-option__symbol {
-  width: 100%;
-  height: 100%;
+  width: 24px;
+  height: 24px;
+  stroke: var(--global-color-gray-xxxx-light);
+  transition: all 0.125s ease-in
 }
 
 .c-db-option--hidden:checked+.c-db-label--options {
-  background-color: var(--global-color-alpha-xx-light);
-  fill: var(--global-color-alpha);
+  background-color: var(--global-color-gray-xxxx-light);
+
+}
+
+.c-db-option--hidden:checked+.c-db-label--options .c-db-custom-option__symbol {
+  stroke: var(--global-color-alpha-xx-dark);
+
 }
 
 .c-db-option--hidden:hover+.c-db-label--options,
-.c-db-option--hidden:focus+.c-db-label--options {}
+.c-db-option--hidden:focus+.c-db-label--options {
+  background-color: var(--global-color-alpha-x-dark);
+}
+
+.c-db-option--hidden:hover+.c-db-label--options .c-db-custom-option__symbol,
+.c-db-option--hidden:focus+.c-db-label--options .c-db-custom-option__symbol {
+  stroke: var(--global-color-gray-xxxx-light);
+}
