--- a/css/style.css
+++ b/css/style.css
@@ -348,6 +348,7 @@ input:disabled {
 
   .c-header__mobile-nav-trigger {
     display: none;
+
   }
 }
 
@@ -361,6 +362,7 @@ input:disabled {
   height: 32px;
   display: flex;
   align-items: center;
+  justify-content: center;
   outline: none;
   transition: transform .2s ease-in-out;
 
@@ -380,6 +382,11 @@ input:disabled {
   .c-logo {
     height: 58px;
     width: 58px;
+  }
+
+  .c-db-mobile-nav__header>.c-logo {
+    height: 32px;
+    width: 32px;
   }
 }
 
@@ -1266,12 +1273,16 @@ input:disabled {
   position: sticky;
   top: 0;
   padding: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
 }
 
 .c-dashboard__sidebar {
   background-color: var(--global-color-alpha-xx-dark);
-  padding: 24px 0 16px 0;
-  display: flex;
+  padding: 8px 0 8px 0;
+  display: none;
   flex-direction: column;
   align-items: flex-end;
   justify-content: space-between;
@@ -1284,7 +1295,6 @@ input:disabled {
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.04);
   position: sticky;
   top: 0;
-  z-index: 2;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -1294,6 +1304,8 @@ input:disabled {
 .c-dashboard__main {
   background-color: var(--global-color-gray-xxxx-light);
   padding: 32px 75px;
+  /* grid-area: grid-row-start / grid-column-start / grid-row-end / grid-column-end */
+  grid-area: 2 / 1 / 2 / 2 span;
 }
 
 /* dashboard logo */
@@ -1303,6 +1315,7 @@ input:disabled {
   justify-content: center;
   height: 48px;
   width: 48px;
+  display: none;
 }
 
 .c-db-logo__symbol {
@@ -1318,8 +1331,8 @@ input:disabled {
 
 .c-db-label--options {
   display: flex;
-  align-items: center;
-  padding: 18px 28px 18px 18px;
+  justify-content: center;
+  padding: 16px 24px;
   border-radius: 100% 0 0 100%;
   cursor: pointer;
   background-image: none;
@@ -1351,4 +1364,96 @@ input:disabled {
 .c-db-option--hidden:hover+.c-db-label--options .c-db-custom-option__symbol,
 .c-db-option--hidden:focus+.c-db-label--options .c-db-custom-option__symbol {
   stroke: var(--global-color-gray-xxxx-light);
+}
+
+/*
+
+mobile dasboard navbar
+
+*/
+
+.c-db-mobile-nav {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: -100%;
+  height: 100dvh;
+  pointer-events: none;
+  transition: all 0.5s ease-in;
+  z-index: 1;
+}
+
+.has-mobile-nav .c-db-mobile-nav {
+  left: 0;
+  pointer-events: auto;
+}
+
+.c-db-mobile-nav__header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 24px;
+}
+
+.c-db-mobile-nav__bg {
+  opacity: 0;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: #202024;
+  transition: opacity 0.5s ease;
+}
+
+.has-mobile-nav .c-db-mobile-nav__bg {
+  opacity: 0.5;
+}
+
+.c-db-mobile-nav__body {
+  position: relative;
+  height: 80dvh;
+  width: 80px;
+  clip-path: polygon(0 0, 100% 0, 100% 72dvh, 0% 100%);
+  background-color: var(--global-color-alpha-xx-dark);
+  opacity: 0;
+  transform: translateX(-100px);
+  transition: transform 0.25s ease;
+}
+
+.has-mobile-nav .c-db-mobile-nav__body {
+  opacity: 1;
+  transform: translateX(0%);
+}
+
+.c-page {
+  opacity: 1;
+  transform: translateX(0);
+  transition: transform 0.25s ease;
+}
+
+.has-mobile-nav .c-page {
+  opacity: 0.5;
+  transform: translateX(25%);
+}
+
+@media (min-width: 992px) {
+  .c-dashboard__sidebar {
+    display: flex;
+  }
+
+  .c-db-logo {
+    display: block;
+  }
+
+  .c-dashboard__main {
+    grid-area: 2 / 2 / 2 / 2;
+  }
+
+  .c-dashboard__sidebar {
+    padding: 24px 0 16px 0;
+  }
+
+  .c-db-label--options {
+    padding: 18px 28px 18px 18px;
+  }
 }
