--- a/css/style.css
+++ b/css/style.css
@@ -489,7 +489,7 @@ input:disabled {
 .c-nav__profile {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   gap: 12px;
 }
 
@@ -512,7 +512,7 @@ input:disabled {
   background: cadetblue;
   display: block;
   border: 2px solid var(--global-color-gray-xxxxx-dark);
-  background: url(../img/svg/user.svg) no-repeat center center / cover;
+  background: url(../img/aman.jpg) no-repeat center center / cover;
   box-shadow: 2px 2px 6px var(--global-color-transparent);
 }
 
@@ -1572,28 +1572,27 @@ mobile dasboard navbar
 */
 
 .c-account {
-  position: relative;
-  top: 100px;
+
   clip-path: polygon(0 0, 100% 0, 100% 80%, 0% 90%);
   display: flex;
-  flex-direction: column;
-  position: fixed;
-  width: 100%;
-  padding: 32px;
-  max-width: 400px;
+  flex-direction: row;
 
+  width: 100%;
+  padding: 0 32px 32px;
+  max-width: 350px;
 }
 
 .c-account__profile {
   background-color: var(--global-color-alpha-xx-light);
-  height: 300px;
   border-radius: 3px;
+
 }
 
 .c-account__profile--background {
   width: 100%;
   height: 125px;
   background-color: var(--global-color-alpha);
+  border-radius: 3px 3px 0 0;
 }
 
 .c-account__profile--img {
@@ -1605,4 +1604,310 @@ mobile dasboard navbar
   margin: 0 auto;
   position: relative;
   top: -80px;
+}
+
+.c-account__logout {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 36px;
+  height: 36px;
+  background-color: var(--global-color-alpha-xx-dark);
+  border-radius: 50%;
+}
+
+.c-account__logout::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url(../img/svg/log-out.svg) no-repeat center center / 50%;
+}
+
+.c-account__content {
+  padding: 24px;
+  top: -80px;
+  position: relative;
+}
+
+.c-account__profile--name {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 32px;
+  color: var(--global-color-gray-xxxxx-dark);
+  text-align: center;
+}
+
+.c-account__profile--nickname {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 20px;
+  color: var(--global-color-gray-xxxxx-dark);
+  text-align: center;
+  margin-bottom: 8px;
+}
+
+.c-account__profile--biotitel {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 20px;
+  color: var(--global-color-gray-xxxxx-dark);
+}
+
+.c-account__profile--bio {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  color: var(--global-color-gray-xxxx-dark);
+  position: relative;
+  margin-bottom: 4px;
+}
+
+.c-account__friends {
+  display: block;
+  line-height: 1px;
+  margin-bottom: 16px;
+}
+
+.c-account__friends--text {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: var(--lh);
+  color: var(--global-color-gray-xxxx-dark);
+  text-align: center;
+  margin-bottom: 0;
+}
+
+.c-account__friends--aantal {
+  display: inline-block;
+  font-size: 16px;
+  line-height: 18px !important;
+  font-weight: 700;
+  line-height: 32px;
+  color: var(--global-color-gray-xxxxx-dark);
+  text-align: center;
+  margin-bottom: 0;
+}
+
+.c-account__friends--buttons {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 16px;
+  margin-bottom: 16px;
+}
+
+.c-account__friend--search {
+  font-size: 12px;
+  line-height: 14px;
+  padding: 4px 8px;
+  max-width: 100px;
+  background-color: transparent;
+  outline: none;
+  border: 2px solid var(--global-color-beta);
+  transition: all 0.25s ease;
+}
+
+.c-account__friend--search:hover,
+.c-account__friend--search:focus {
+  background: var(--global-color-beta);
+}
+
+.c-account__friend--search:active {
+  background: transparent;
+}
+
+.c-account__profile--edit {
+  position: absolute;
+  top: -22px;
+  right: 0;
+  width: 16px;
+  height: 16px;
+}
+
+.c-account__profile--edit--symbol {
+  width: 100%;
+  height: 100%;
+}
+
+.c-account-content {
+  position: relative;
+  top: 100px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 54em;
+  margin: 0 auto;
+}
+
+.c-account__activities {
+  padding: 0 32px;
+}
+
+.c-account__activities--title {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 32px;
+}
+
+/*
+
+  activity
+
+*/
+
+.c-activities {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  width: 100%;
+}
+
+.c-activity {
+  display: flex;
+  flex-direction: column;
+  padding: 24px;
+  background-color: var(--global-color-alpha-xx-light);
+}
+
+.c-activity__top {
+  display: flex;
+  justify-content: space-between;
+  gap: 8px;
+  margin-bottom: 16px;
+  align-items: center
+}
+
+.c-activity__top--left {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  gap: 8px;
+}
+
+.c-activity__top--img {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  background: url(../img/Wall/huygh.jpg) no-repeat center center / cover;
+}
+
+.c-activity__top--naam {
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 20px;
+  color: var(--global-color-gray-xxxxx-dark);
+}
+
+.c-activity__top--date {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16px;
+  color: var(--global-color-gray-xxxx-dark);
+}
+
+.c-activity__intro {
+  font-size: 18px;
+  font-weight: 700;
+  margin-bottom: 4px;
+}
+
+.c-activity__stats {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 16px;
+}
+
+.c-activity__stats--meta {
+  font-weight: 500;
+}
+
+.c-activity__comment {
+  margin-bottom: 16px;
+}
+
+.c-activity__line {
+  height: 2px;
+  width: 100%;
+  background-color: var(--global-color-beta);
+  display: block;
+  margin-bottom: 16px;
+}
+
+.c-activity__comment--add {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  gap: 8px;
+}
+
+@media (min-width: 768px) {
+  .c-account-content {
+    flex-direction: row;
+    align-items: flex-start;
+  }
+}
+
+.c-activity__heart {
+  width: 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  cursor: pointer;
+}
+
+.c-activity__heart--symbol {
+  width: 100%;
+  height: 100%;
+}
+
+.c-heart-checkbox:checked+.c-activity__heart .c-activity__heart--symbol {
+  stroke: var(--global-color-beta);
+  animation: heart 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+
+.c-heart-checkbox:hover+.c-activity__heart .c-activity__heart--symbol,
+.c-heart-checkbox:focus+.c-activity__heart .c-activity__heart--symbol {
+  background-color: var(--global-color-alpha);
+}
+
+@keyframes heart {
+  0% {
+    transform: scale(1) rotate(0);
+  }
+
+  25% {
+    transform: scale(1.1) rotate(33deg);
+  }
+
+  50% {
+    transform: scale(1.2) rotate(0);
+  }
+
+  75% {
+    transform: scale(1.1) rotate(-33deg);
+  }
+
+  100% {
+    transform: scale(1) rotate(0);
+  }
+}
+
+.c-nav__profile--meta {
+  position: relative;
+  top: -8px;
+}
+
+.c-nav__profileimg--meta {
+  border-color: var(--global-color-gray-xxx-light);
+  transition: all 0.25s ease;
+}
+
+.c-nav__profileimg--meta:hover {
+  border-color: var(--global-color-beta);
 }
