--- a/css/style.css
+++ b/css/style.css
@@ -56,25 +56,25 @@
 
 @font-face {
   font-family: 'Urbanist';
-  src: url(../fonts/Urbanist-Light.ttf);
+  src: url(https://klimapp2b47b.blob.core.windows.net/meeclimbcontent/Urbanist-Light.ttf);
   font-weight: 300;
 }
 
 @font-face {
   font-family: 'Urbanist';
-  src: url(../fonts/Urbanist-Regular.ttf);
+  src: url(https://klimapp2b47b.blob.core.windows.net/meeclimbcontent/Urbanist-Regular.ttf);
   font-weight: 400;
 }
 
 @font-face {
   font-family: 'Urbanist';
-  src: url(../fonts/Urbanist-Medium.ttf);
+  src: url(https://klimapp2b47b.blob.core.windows.net/meeclimbcontent/Urbanist-Medium.ttf);
   font-weight: 500;
 }
 
 @font-face {
   font-family: 'Urbanist';
-  src: url(../fonts/Urbanist-Bold.ttf);
+  src: url(https://klimapp2b47b.blob.core.windows.net/meeclimbcontent/Urbanist-Bold.ttf);
   font-weight: 700;
 }
 
@@ -527,7 +527,7 @@ input:disabled {
   background: cadetblue;
   display: block;
   border: 2px solid var(--global-color-gray-xxxxx-dark);
-  background: url(../img/aman.jpg) no-repeat center center / cover;
+  background: url(https://klimapp2b47b.blob.core.windows.net/meeclimbimage/aman.jpg) no-repeat center center / cover;
   box-shadow: 2px 2px 6px var(--global-color-transparent);
 }
 
@@ -677,7 +677,7 @@ input:disabled {
   position: absolute;
   top: 0;
   left: 0;
-  background: url(../img/Background.jpg) no-repeat center center / cover;
+  background: url(https://klimapp2b47b.blob.core.windows.net/meeclimbimage/Background.jpg) no-repeat center center / cover;
   width: 100%;
   height: 100%;
   z-index: -1;
@@ -697,7 +697,7 @@ input:disabled {
   position: absolute;
   top: 0;
   right: 0;
-  background: url(../img/man.svg) no-repeat center center / cover;
+  background: url(https://klimapp2b47b.blob.core.windows.net/meeclimbimage/man.svg) no-repeat center center / cover;
   width: 50%;
   height: 100%;
   z-index: -1;
@@ -824,7 +824,7 @@ input:disabled {
   top: 0;
   width: 100%;
   height: 100%;
-  background: url(../img/Wall/sander.jpg) no-repeat center center / cover;
+  background: url(https://klimapp2b47b.blob.core.windows.net/meeclimbimage/sander.jpg) no-repeat center center / cover;
   filter: sepia(50%) saturate(350%) hue-rotate(210deg) brightness(50%) blur(1px);
   transform: scale(1.05);
   z-index: -1;
@@ -835,7 +835,7 @@ input:disabled {
   top: 0;
   width: 100%;
   height: 100%;
-  background: url(../img/Wall/huygh.jpg) no-repeat center center / cover;
+  background: url(https://klimapp2b47b.blob.core.windows.net/meeclimbimage/huygh.jpg) no-repeat center center / cover;
   filter: sepia(50%) saturate(350%) hue-rotate(210deg) brightness(50%) blur(1px);
   transform: scale(1.05);
   z-index: -1;
@@ -944,7 +944,7 @@ input:disabled {
   height: 16px;
   left: -8px;
   top: -8px;
-  background: url(../img/grips/Bak.svg) no-repeat center center / 100%;
+  background: url(https://klimapp2b47b.blob.core.windows.net/meeclimbimage/Bak.svg) no-repeat center center / 100%;
 }
 
 .c-wall__grid--item--grip--sloper:after {
@@ -955,7 +955,7 @@ input:disabled {
   height: 16px;
   left: -8px;
   top: -8px;
-  background: url(../img/grips/Sloper.svg) no-repeat center center / 100%;
+  background: url(https://klimapp2b47b.blob.core.windows.net/meeclimbimage/Sloper.svg) no-repeat center center / 100%;
 }
 
 .c-wall__grid--item--grip--crimp:after {
@@ -966,7 +966,7 @@ input:disabled {
   height: 16px;
   left: -8px;
   top: -8px;
-  background: url(../img/grips/Crimp.svg) no-repeat center center / 100%;
+  background: url(https://klimapp2b47b.blob.core.windows.net/meeclimbimage/Crimp.svg) no-repeat center center / 100%;
 }
 
 .c-wall__grid--item--grip--pocket:after {
@@ -977,7 +977,7 @@ input:disabled {
   height: 16px;
   left: -8px;
   top: -8px;
-  background: url(../img/grips/Pocket.svg) no-repeat center center / 100%;
+  background: url(https://klimapp2b47b.blob.core.windows.net/meeclimbimage/Pocket.svg) no-repeat center center / 100%;
 }
 
 .c-wall__grid--item--grip--jug:after {
@@ -988,7 +988,7 @@ input:disabled {
   height: 16px;
   left: -8px;
   top: -8px;
-  background: url(../img/grips/Jug.svg) no-repeat center center / 100%;
+  background: url(https://klimapp2b47b.blob.core.windows.net/meeclimbimage/Jug.svg) no-repeat center center / 100%;
 }
 
 .c-wall__grid--item--grip--undercling:after {
@@ -999,7 +999,7 @@ input:disabled {
   height: 16px;
   left: -8px;
   top: -8px;
-  background: url(../img/grips/Undercling.svg) no-repeat center center / 100%;
+  background: url(https://klimapp2b47b.blob.core.windows.net/meeclimbimage/Undercling.svg) no-repeat center center / 100%;
 }
 
 .c-wall__grid--item--grip--mono:after {
@@ -1010,7 +1010,7 @@ input:disabled {
   height: 16px;
   left: -8px;
   top: -8px;
-  background: url(../img/grips/Mono.svg) no-repeat center center / 100%;
+  background: url(https://klimapp2b47b.blob.core.windows.net/meeclimbimage/Mono.svg) no-repeat center center / 100%;
 }
 
 .c-wall__grid--item--grip--bidoigt:after {
@@ -1021,7 +1021,7 @@ input:disabled {
   height: 16px;
   left: -8px;
   top: -8px;
-  background: url(../img/grips/Bidoigt.svg) no-repeat center center / 100%;
+  background: url(https://klimapp2b47b.blob.core.windows.net/meeclimbimage/Bidoigt.svg) no-repeat center center / 100%;
 }
 
 .c-wall__svg {
@@ -1664,7 +1664,7 @@ mobile dasboard navbar
 }
 
 .c-account__profile--img {
-  background: url(../img/Wall/huygh.jpg) no-repeat center center / cover;
+  background: url(https://klimapp2b47b.blob.core.windows.net/meeclimbimage/huygh.jpg) no-repeat center center / cover;
   width: 120px;
   height: 120px;
   border-radius: 50%;
@@ -1691,7 +1691,7 @@ mobile dasboard navbar
   left: 0;
   width: 100%;
   height: 100%;
-  background: url(../img/svg/log-out.svg) no-repeat center center / 50%;
+  background: url(https://klimapp2b47b.blob.core.windows.net/meeclimbimage/log-out.svg) no-repeat center center / 50%;
 }
 
 .c-account__content {
@@ -1861,7 +1861,7 @@ mobile dasboard navbar
   width: 48px;
   height: 48px;
   border-radius: 50%;
-  background: url(../img/Wall/huygh.jpg) no-repeat center center / cover;
+  background: url(https://klimapp2b47b.blob.core.windows.net/meeclimbimage/huygh.jpg) no-repeat center center / cover;
 }
 
 .c-activity__top--naam {
