--- a/css/style.css
+++ b/css/style.css
@@ -808,6 +808,14 @@ input:disabled {
 }
 
 .c-touw__backgouround {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  filter: sepia(50%) saturate(350%) hue-rotate(210deg) brightness(50%) blur(1px);
+  transform: scale(1.05);
+  z-index: -1;
   transition: all 200ms ease-in;
 }
 
@@ -1680,7 +1688,7 @@ mobile dasboard navbar
   right: 0;
   width: 36px;
   height: 36px;
-  background-color: var(--global-color-alpha-xx-dark);
+  background-color: var(--global-color-alpha-x-light);
   border-radius: 50%;
 }
 
